<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.view.SignUpInfoFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="@dimen/long_button"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/name"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="@dimen/long_button"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="right">

                        <TextView
                            android:id="@+id/textView_phoneCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="10dp"
                            android:text="인증완료"
                            android:textColor="@color/error_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/button_phoneCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="번호인증" />

                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="clear_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_password"
                        android:layout_width="@dimen/long_button"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_passwordDup"
                        android:layout_width="@dimen/long_button"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/passwordDup"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_passwordDup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_SignUpNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nickName"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="@dimen/long_button"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="right">

                        <TextView
                            android:id="@+id/textView_dupChecked"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="10dp"
                            android:text="중복확인 완료"
                            android:textColor="@color/error_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/button_DupCheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="중복확인" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_roadAddress"
                        android:layout_width="@dimen/long_button"
                        android:layout_height="wrap_content"
                        android:hint="@string/roadAddress"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_roadAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField_detailAddress"
                        android:layout_width="@dimen/long_button"
                        android:layout_height="wrap_content"
                        android:hint="@string/detailAddress"
                        android:padding="2dp"
                        app:boxBackgroundColor="@color/white"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_detailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/button_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="정보수정"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
