<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.FindEmailFragment" >

    <LinearLayout
        android:layout_width="@dimen/long_button"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_SignUpName"
            android:layout_width="@dimen/long_button"
            android:layout_height="wrap_content"
            android:hint="@string/signup_name"
            android:padding="2dp"
            android:singleLine="true"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_SignUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_SignUpPhone"
            android:layout_width="@dimen/long_button"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:hint="@string/signup_phone"
            android:singleLine="true"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_SignUpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="@dimen/long_button"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="인증완료"
                android:textColor="@color/error_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDupCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="번호인증" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이메일 찾기"
        android:textAllCaps="false"
        android:textColor="@color/main_400"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/buttonInfoCheck"
        android:layout_width="@dimen/long_button"
        android:layout_height="wrap_content"
        android:text="가입정보 확인하기"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_SignUpEmail"
        android:layout_width="@dimen/long_button"
        android:layout_height="wrap_content"
        android:hint="@string/find_email"
        android:padding="2dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInfoCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonMain"
        android:layout_width="@dimen/long_button"
        android:layout_height="wrap_content"
        android:text="메인 화면으로"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_SignUpEmail"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>